# Simple-Social

./: README.md  Screencast from 2025-11-28 13-36-10.webm  frontend.py  pyproject.toml  test.db
app/: app.py  db.py  images.py  schemas.py  users.py
